[gd_scene load_steps=11 format=3 uid="uid://ukwqm4lynwtt"]

[ext_resource type="Script" uid="uid://cmivc86q17toe" path="res://quadcopter/Quadcopter.gd" id="1_2l7nd"]
[ext_resource type="PackedScene" uid="uid://dj2tf6l8de5d8" path="res://quadcopter/motors/Motor.tscn" id="1_7js25"]
[ext_resource type="PackedScene" uid="uid://k72klqrwdsfh" path="res://quadcopter/propellers/Propeller.tscn" id="2_rl4bc"]
[ext_resource type="PackedScene" uid="uid://bl5eci0hpso2m" path="res://quadcopter/flight_controller/FlightController.tscn" id="3_eqg83"]
[ext_resource type="AudioStream" uid="uid://xt4m8jaqfh6a" path="res://quadcopter/383852__simeonradivoev__mini-quadcopter-flying-loop.wav" id="5_aj1qe"]
[ext_resource type="AudioStream" uid="uid://b758griwui6ay" path="res://quadcopter/wind noise.ogg" id="6_mjmmr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n3fk8"]
friction = 0.6
bounce = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_mjmmr"]
size = Vector3(0.2, 0.04, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4prjh"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ivhy6"]
size = Vector3(0.2, 0.04, 0.2)

[node name="Quadcopter" type="RigidBody3D" node_paths=PackedStringArray("motor1", "motor2", "motor3", "motor4")]
mass = 0.6
physics_material_override = SubResource("PhysicsMaterial_n3fk8")
can_sleep = false
continuous_cd = true
linear_damp_mode = 1
script = ExtResource("1_2l7nd")
motor1 = NodePath("motors/Motor1")
motor2 = NodePath("motors/Motor2")
motor3 = NodePath("motors/Motor3")
motor4 = NodePath("motors/Motor4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_mjmmr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_4prjh")
gi_mode = 0
mesh = SubResource("BoxMesh_ivhy6")

[node name="motors" type="Node3D" parent="."]

[node name="Motor1" parent="motors" node_paths=PackedStringArray("prop") instance=ExtResource("1_7js25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, 0.08)
prop = NodePath("Propeller")
direction = 1

[node name="Propeller" parent="motors/Motor1" instance=ExtResource("2_rl4bc")]
visible = false

[node name="Motor2" parent="motors" node_paths=PackedStringArray("prop") instance=ExtResource("1_7js25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.08, 0, -0.08)
prop = NodePath("Propeller")
direction = -1

[node name="Propeller" parent="motors/Motor2" instance=ExtResource("2_rl4bc")]
visible = false

[node name="Motor3" parent="motors" node_paths=PackedStringArray("prop") instance=ExtResource("1_7js25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, 0.08)
prop = NodePath("Propeller")
direction = -1

[node name="Propeller" parent="motors/Motor3" instance=ExtResource("2_rl4bc")]
visible = false

[node name="Motor4" parent="motors" node_paths=PackedStringArray("prop") instance=ExtResource("1_7js25")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0, -0.08)
prop = NodePath("Propeller")
direction = 1

[node name="Propeller" parent="motors/Motor4" instance=ExtResource("2_rl4bc")]
visible = false

[node name="FlightController" parent="." node_paths=PackedStringArray("quadcopter", "motor1", "motor2", "motor3", "motor4") instance=ExtResource("3_eqg83")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01225, 0)
quadcopter = NodePath("..")
motor1 = NodePath("../motors/Motor1")
motor2 = NodePath("../motors/Motor2")
motor3 = NodePath("../motors/Motor3")
motor4 = NodePath("../motors/Motor4")

[node name="FPVCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.90630865, -0.4226187, 0, 0.4226187, 0.90630865, 0, 0, -0.0945663)
current = true
fov = 150.0
near = 0.001

[node name="AudioMotors" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_aj1qe")
volume_db = -47.3871
autoplay = true
bus = &"SFX"

[node name="AudioWind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mjmmr")
autoplay = true

[node name="FloorCast" type="RayCast3D" parent="."]
top_level = true
target_position = Vector3(0, -0.3, 0)
